# sl

./: .gitignore  CNAME  Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  sl-installer.sh.txt
.github/workflows/: web.yml
artifacts/: index.html
book/: 404.html  contributing.html  index.html  print.html  quickstart.html  searchindex.js  searchindex.json
changelog/: index.html
changelog/v0.0.3/: index.html
changelog/v0.0.4/: index.html
changelog/v0.0.5/: index.html
changelog/v0.0.6/: index.html
changelog/v0.0.7/: index.html
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  introduction.md  quickstart.md
src/: colours.rs  flags.rs  main.rs
