[package]
name = "sl"
version = "0.0.2"
authors = ["Alexander Jophus <hello@alexanderjophus.dev>"]
edition = "2021"
repository = "https://github.com/alexanderjophus/sl"
description = "A Rust implementation of the classic Unix 'sl' command."

[dependencies]
crossterm = "0.27"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# A GitHub repo to push Homebrew formulas to
tap = "alexanderjophus/sl"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
